# Azure-Kinect-normal-map-with-CUDA

./: CMakeLists.txt  README.md  cuda_normal.cu  cuda_normal.h  main.cpp
